<resources>
    <string name="app_name">ClubConnect</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="cs_logo">CS-logo</string>
    <string name="aids_logo">AIDS-Logo</string>
    <string name="notifications1">Notifications</string>
    <string name="viita_logo">VIITA-Logo</string>
    <string name="gdsc_logo">GDSC-Logo</string>
    <string name="gdsc">GDSC</string>
    <string name="click_to_logout">Click to Logout</string>
    <string name="saving">Saving...</string>
    <string name="upload_data">Upload Data</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_description">Enter description</string>
    <string name="save">Save</string>
    <string name="enter_topic_name">Enter topic name</string>
    <string name="upload_data1">Upload Data</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="loading">Loading...</string>
    <string name="todo">TODO</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="share1">Share</string>
    <string name="shareimage">shareImage</string>
    <string name="settings1">Settings</string>
    <string name="under_development">Under Development...</string>
</resources>