<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:weightSum="10"
        app:layout_constraintBaseline_toBaselineOf="parent">


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:columnCount="1"
            android:rowCount="3"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:padding="15dp">


            <androidx.cardview.widget.CardView

                android:id="@+id/d31"
                app:cardBackgroundColor="#B560CC"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:background="#B460CB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:orientation="horizontal"
                    >


                    <ImageView
                    android:id="@+id/settings"
                    android:layout_width="50dp"
                    android:layout_height="45dp"
                    android:src="@drawable/baseline_settings_24"
                    android:contentDescription="@string/settings1" />
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="55dp"
                        android:text="@string/settings1"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:textColor="@color/white">

                    </TextView>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/d32"
                app:cardBackgroundColor="#B560CC"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:background="#B460CB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:orientation="horizontal"
                    >


                    <ImageView
                        android:id="@+id/About"
                        android:layout_width="50dp"
                        android:layout_height="45dp"
                        android:src="@drawable/baseline_share_24"
                        android:contentDescription="@string/shareimage" />
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="55dp"
                        android:text="@string/share1"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:textColor="@color/white">

                    </TextView>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/d33"
                app:cardBackgroundColor="#B560CC"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="100dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:background="#B460CB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/info"
                        android:layout_width="50dp"
                        android:layout_height="45dp"
                        android:src="@drawable/baseline_info_24" />
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="55dp"
                        android:text="About Us"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:textColor="@color/white">

                    </TextView>


                </LinearLayout>


            </androidx.cardview.widget.CardView>



        </GridLayout>
        <TextView
            android:id="@+id/user_details"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="Hello World"
            android:layout_marginLeft="70dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="145dp"
            android:text="@string/logout" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomNavigationView"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_background"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:elevation="2dp"
        app:menu="@menu/bottom_menu"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled" />

</RelativeLayout>