<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".d11">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:weightSum="10"
        app:layout_constraintBaseline_toBaselineOf="parent">


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:padding="15dp"
            android:rowCount="3">


            <androidx.cardview.widget.CardView

                android:id="@+id/d121"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="#B460CB"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:background="#B460CB"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="112dp"
                        android:layout_height="110dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="CSI-logo"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="CSI"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold">

                    </TextView>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/d122"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="#B460CB"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:background="#B360CA"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="129dp"
                        android:layout_height="121dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="Cybercell-Logo"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="Cybercell"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:textStyle="bold">

                    </TextView>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/d123"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="#B360CA"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:background="#B360CA"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="117dp"
                        android:layout_height="95dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/viita_logo"
                       />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="VIITA"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold">

                    </TextView>


                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView

                android:id="@+id/d124"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="#B360CA"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:background="#B360CA"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="95dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/gdsc_logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/gdsc"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold">

                    </TextView>


                </LinearLayout>

            </androidx.cardview.widget.CardView>




        </GridLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>